--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -124,8 +124,8 @@
             <li><a [routerLink]="['falcon-e-commerce-wekly-Sales']"> e-commerce wekly sales </a></li>
             <li><a [routerLink]="['falcon-dashboard-default-weklySales']"> default wekly sales </a></li>
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Shopping-Cart']">Shopping Cart</a></li>
-
-
+            <li><a [routerLink]="['Falcon-Social-feed']">Social Feed</a></li>
+            <li><a [routerLink]="['Editor-Example']">Editor Example</a></li>
         </div>
     </div>
 </ul>
