Cambios en editor Example

--- a/src/app/feature/falcon/falcon-social-feed/falcon-social-feed.component.html
+++ b/src/app/feature/falcon/falcon-social-feed/falcon-social-feed.component.html
@@ -572,6 +572,7 @@
             <span class="fs-0 text-warning fw-semi-bold">$49.99 – $89.99</span>
           </div>
         </div>
+        <button type="button" class="bg-white justify-center text-black ml-64 -mt-40 px-4 btn btn-falcon-default btn-sm">Register</button>
       </div>
     </div>
   </div>
