--- a/src/app/feature/falcon/editor-example/editor-example.component.html
+++ b/src/app/feature/falcon/editor-example/editor-example.component.html
@@ -1,19 +1,221 @@
-<div class="border border-style-100 w-10/12 mt-3 ml-20 rounded bg-gray-100 ">
+<div class="border border-style-100 w-10/12 mt-3 ml-20 rounded bg-gray-100">
   <div class="relative mt-4">
-    <button class="btn btn-sm bg-gray-50 text-black absolute right-24 mt-4 ">Preview</button>
-   </div>
-  <div class=" absolute right-44  mt-4">
-     <button class="btn btn-sm bg-gray-50 text-black w-20">Code</button>
+    <button class="btn btn-sm bg-gray-50 text-black absolute right-24 mt-4">
+      Preview
+    </button>
   </div>
+  <div class="absolute right-44 dropdown mt-4">
+    <button class="btn btn-sm bg-gray-50 text-black w-20 dropdown-hover">
+      Code
+    </button>
+    <textarea
+      class="npm__react-simple-code-editor__textarea dropdown-content"
+      autocapitalize="off"
+      autocomplete="off"
+      autocorrect="off"
+      spellcheck="false"
+      data-gramm="false"
+      style="
+        margin: 0px;
+        border: 0px;
+        background: none;
+        box-sizing: inherit;
+        display: inherit;
+        font-family: inherit;
+        font-size: inherit;
+        font-style: inherit;
+        font-variant-ligatures: inherit;
+        font-weight: inherit;
+        letter-spacing: inherit;
+        line-height: inherit;
+        tab-size: inherit;
+        text-indent: inherit;
+        text-rendering: inherit;
+        text-transform: inherit;
+        white-space: pre-wrap;
+        word-break: keep-all;
+        overflow-wrap: break-word;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        resize: none;
+        color: inherit;
+        overflow: hidden;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-fill-color: transparent;
+        padding: 10px;
+      "
+    >
+function SingleSelectExample() {
+      const [value, setValue] = useState(null);
+      return(
+        &lt;TinymceEditor
+          value={value}
+          handleChange={newValue =&gt; setFormData(newValue)}
+        /&gt;
+      )
+    }</textarea
+    >
+  </div>
+
   <div class="">
     <div class="dropdown dropdown-hover flex p-4 text-xl b">
-       <label  class="">Example</label>
-       <p  class="dropdown-content menu p-2 w-52 ml-20 -mt-2 link link-hover text-blue-600">
+      <label class="">Example</label>
+      <p
+        class="dropdown-content menu p-2 w-52 ml-20 -mt-2 link link-hover text-blue-600"
+      >
         #
-       </p>
-    </div>
-   </div>
- <div class="broder border-slate-50">
+      </p>
+      <div class=" ">
+        <span class="border-slate-50 grow">
+          <br />
+          <div class="relative -ml-16 border-collapse left-28">
+            <select class="select select-primary max-w-sm select-sm -ml-32">
+              <option>Paragraph</option>
+              <option>Headings</option>
+              <option>Inline</option>
+              <option>Blocks</option>
+              <option>Align</option>
+            </select>
+          </div>
+          <div class="border ml-8 -mt-8 h-7 w-7">
+            <button
+              aria-label="Bold"
+              title="Bold"
+              type="button"
+              tabindex="-1"
+              class="tox-tbtn tox-tbtn--enabled"
+              aria-disabled="false"
+              aria-pressed="true"
+            >
+              <span class="border-slate-200 tox-icon tox-tbtn__icon-wrap"
+                ><svg width="24" height="24" focusable="false">
+                  <path
+                    d="M7.8 19c-.3 0-.5 0-.6-.2l-.2-.5V5.7c0-.2 0-.4.2-.5l.6-.2h5c1.5 0 2.7.3 3.5 1 .7.6 1.1 1.4 1.1 2.5a3 3 0 01-.6 1.9c-.4.6-1 1-1.6 1.2.4.1.9.3 1.3.6s.8.7 1 1.2c.4.4.5 1 .5 1.6 0 1.3-.4 2.3-1.3 3-.8.7-2.1 1-3.8 1H7.8zm5-8.3c.6 0 1.2-.1 1.6-.5.4-.3.6-.7.6-1.3 0-1.1-.8-1.7-2.3-1.7H9.3v3.5h3.4zm.5 6c.7 0 1.3-.1 1.7-.4.4-.4.6-.9.6-1.5s-.2-1-.7-1.4c-.4-.3-1-.4-2-.4H9.4v3.8h4z"
+                    fill-rule="evenodd"
+                  ></path></svg
+              ></span>
+            </button>
+            <div class="border ml-7 -mt-8 h-7 w-7">
+              <svg width="24" height="24" focusable="false">
+                <path
+                  d="M16.7 4.7l-.1.9h-.3c-.6 0-1 0-1.4.3-.3.3-.4.6-.5 1.1l-2.1 9.8v.6c0 .5.4.8 1.4.8h.2l-.2.8H8l.2-.8h.2c1.1 0 1.8-.5 2-1.5l2-9.8.1-.5c0-.6-.4-.8-1.4-.8h-.3l.2-.9h5.8z"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+              <div class="border ml-7 -mt-6 h-7 w-7">
+                <svg width="24" height="24" focusable="false">
+                  <path
+                    d="M6.2 12.3a1 1 0 011.4 1.4l-2.1 2a2 2 0 102.7 2.8l4.8-4.8a1 1 0 000-1.4 1 1 0 111.4-1.3 2.9 2.9 0 010 4L9.6 20a3.9 3.9 0 01-5.5-5.5l2-2zm11.6-.6a1 1 0 01-1.4-1.4l2-2a2 2 0 10-2.6-2.8L11 10.3a1 1 0 000 1.4A1 1 0 119.6 13a2.9 2.9 0 010-4L14.4 4a3.9 3.9 0 015.5 5.5l-2 2z"
+                    fill-rule="nonzero"
+                  ></path>
+                </svg>
+                <div class="border ml-7 -mt-7 h-7 w-7">
+                  <svg width="24" height="24" focusable="false">
+                    <path
+                      d="M11 5h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zM4.5 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1z"
+                      fill-rule="evenodd"
+                    ></path>
+                  </svg>
+                  <div class="border ml-7 -mt-6 h-7 w-7">
+                    <svg width="24" height="24" focusable="false">
+                      <path
+                        d="M10 17h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 110-2zM6 4v3.5c0 .3-.2.5-.5.5a.5.5 0 01-.5-.5V5h-.5a.5.5 0 010-1H6zm-1 8.8l.2.2h1.3c.3 0 .5.2.5.5s-.2.5-.5.5H4.9a1 1 0 01-.9-1V13c0-.4.3-.8.6-1l1.2-.4.2-.3a.2.2 0 00-.2-.2H4.5a.5.5 0 01-.5-.5c0-.3.2-.5.5-.5h1.6c.5 0 .9.4.9 1v.1c0 .4-.3.8-.6 1l-1.2.4-.2.3zM7 17v2c0 .6-.4 1-1 1H4.5a.5.5 0 010-1h1.2c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.4a.4.4 0 110-.8h1.3c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.5a.5.5 0 110-1H6c.6 0 1 .4 1 1z"
+                        fill-rule="evenodd"
+                      ></path>
+                    </svg>
+                  </div>
 
- </div>
+                  <div class="border ml-14 -mt-7 h-7 w-7">
+                    <svg width="24" height="24" focusable="false">
+                      <path
+                        d="M5 15.7l3.3-3.2c.3-.3.7-.3 1 0L12 15l4.1-4c.3-.4.8-.4 1 0l2 1.9V5H5v10.7zM5 18V19h3l2.8-2.9-2-2L5 17.9zm14-3l-2.5-2.4-6.4 6.5H19v-4zM4 3h16c.6 0 1 .4 1 1v16c0 .6-.4 1-1 1H4a1 1 0 01-1-1V4c0-.6.4-1 1-1zm6 8a2 2 0 100-4 2 2 0 000 4z"
+                        fill-rule="nonzero"
+                      ></path>
+                    </svg>
+                  </div>
+
+                  <div class="border ml-20 relative left-1 -mt-7 h-7 w-7">
+                    <svg width="24" height="24" focusable="false">
+                      <path
+                        d="M7.5 17h.9c.4 0 .7-.2.9-.6L11 13V8c0-.6-.4-1-1-1H6a1 1 0 00-1 1v4c0 .6.4 1 1 1h2l-1.3 2.7a1 1 0 00.8 1.3zm8 0h.9c.4 0 .7-.2.9-.6L19 13V8c0-.6-.4-1-1-1h-4a1 1 0 00-1 1v4c0 .6.4 1 1 1h2l-1.3 2.7a1 1 0 00.8 1.3z"
+                        fill-rule="nonzero"
+                      ></path>
+                    </svg>
+                  </div>
+                  <div class="border ml-28 -mt-7 h-7 w-7">
+                    <button
+                      title="Table"
+                      aria-label="Table"
+                      aria-haspopup="true"
+                      type="button"
+                      tabindex="-1"
+                      data-alloy-tabstop="true"
+                      unselectable="on"
+                      class="tox-tbtn tox-tbtn--select"
+                      aria-expanded="false"
+                      style="user-select: none"
+                    >
+                      <span class="tox-icon tox-tbtn__icon-wrap"
+                        ><svg width="24" height="24" focusable="false">
+                          <path
+                            fill-rule="nonzero"
+                            d="M19 4a2 2 0 012 2v12a2 2 0 01-2 2H5a2 2 0 01-2-2V6c0-1.1.9-2 2-2h14zM5 14v4h6v-4H5zm14 0h-6v4h6v-4zm0-6h-6v4h6V8zM5 12h6V8H5v4z"
+                          ></path></svg
+                      ></span>
+                      <div
+                        class="tox-tbtn__select-chevron border h-7 ml-7 -mt-6"
+                      >
+                        <svg width="10" height="18" focusable="false">
+                          <path
+                            d="M8.7 2.2c.3-.3.8-.3 1 0 .4.4.4.9 0 1.2L5.7 7.8c-.3.3-.9.3-1.2 0L.2 3.4a.8.8 0 010-1.2c.3-.3.8-.3 1.1 0L5 6l3.7-3.8z"
+                            fill-rule="nonzero"
+                          ></path>
+                        </svg>
+                      </div>
+                    </button>
+                  </div>
+                  <div class="border ml-40 -mt-7 h-7 w-7">
+                    <svg width="24" height="24" focusable="false">
+                      <path
+                        d="M4 3h16c.6 0 1 .4 1 1v16c0 .6-.4 1-1 1H4a1 1 0 01-1-1V4c0-.6.4-1 1-1zm1 2v14h14V5H5zm4.8 2.6l5.6 4a.5.5 0 010 .8l-5.6 4A.5.5 0 019 16V8a.5.5 0 01.8-.4z"
+                        fill-rule="nonzero"
+                      ></path>
+                    </svg>
+                  </div>
+                  <div class="border ml-48 -mt-7 h-7 w-7 row">
+                    <svg width="24" height="24" focusable="false">
+                      <path
+                        d="M6.4 8H12c3.7 0 6.2 2 6.8 5.1.6 2.7-.4 5.6-2.3 6.8a1 1 0 01-1-1.8c1.1-.6 1.8-2.7 1.4-4.6-.5-2.1-2.1-3.5-4.9-3.5H6.4l3.3 3.3a1 1 0 11-1.4 1.4l-5-5a1 1 0 010-1.4l5-5a1 1 0 011.4 1.4L6.4 8z"
+                        fill-rule="nonzero"
+                      ></path>
+                    </svg>
+                  </div>
+                  <div class="border ml-56 -mt-7 h-7 w-7">
+                    <svg width="24" height="24" focusable="false">
+                      <path
+                        d="M17.6 10H12c-2.8 0-4.4 1.4-4.9 3.5-.4 2 .3 4 1.4 4.6a1 1 0 11-1 1.8c-2-1.2-2.9-4.1-2.3-6.8.6-3 3-5.1 6.8-5.1h5.6l-3.3-3.3a1 1 0 111.4-1.4l5 5a1 1 0 010 1.4l-5 5a1 1 0 01-1.4-1.4l3.3-3.3z"
+                        fill-rule="nonzero"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </span>
+      </div>
+    </div>
+    <div class="broder mt-7 bg-clip-content border-slate-50">
+      <div class="boirder border-slate-200">
+        <input
+          type="text"
+          class="w-full -mt-10 h-60 ml-3 ms-2 fs--1 form-control"
+          value=""
+        />
+      </div>
+    </div>
+  </div>
 </div>
